# qqagent

./: .env.example  .gitignore  README.md  config.yaml  implementation_plan.md  install_log.txt  pyproject.toml  read_log.py
config/: admin_users.json  builtin_tools.yaml
config/presets/: catgirl.yaml  default.yaml  琪露诺.yaml  琪露诺1.yaml  琪露诺_old.yaml
mcpserver/crawl4ai_server/: config.py  crawler.py  requirements.txt  server.py
mcpserver/gemini-image-mcp/: server.py
mcpserver/mcp_rag_server/: config.py  rag_engine.py  requirements.txt  server.py
mcpserver/tts_server/: server.py
src/: __init__.py  bot.py  main.py  sandbox.py
src/adapters/: __init__.py  mcp.py  onebot.py
src/admin/: __init__.py  __main__.py  app.py  auth.py  startup.py
src/admin/frontend/: package-lock.json  package.json  vite.config.ts
src/admin/routers/: agent.py  mcp.py  (+7 more)
src/agent/: __init__.py  compat.py  graph.py  llm.py  state.py  tool_registry.py  tools.py  tools_code.py  tools_openclaw.py  tools_web.py
src/core/: __init__.py  context.py  exceptions.py  file_reader.py  llm_message.py  media.py  message_fetch.py  onebot.py  resilience.py  stt.py  text_renderer.py
src/memory/: __init__.py  embeddings.py  knowledge.py  store.py
src/models/: __init__.py  media.py
src/presets/: __init__.py  loader.py
src/processing/: audio.py  pipeline.py
src/sandbox_web/: __init__.py  __main__.py  app.py  models.py
src/session/: __init__.py  aggregator.py  formatter.py  manager.py  message.py
src/utils/: config.py  config_loader.py  env_loader.py  logger.py  path.py
tests/: __init__.py
(+44 files in other folders)
